--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
     "@ionic/angular": "^5.5.2",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.2.0",
+    "moment": "^2.29.1",
     "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.1",
